--- a/Task4/Task4/Task4.vcxproj.filters
+++ b/Task4/Task4/Task4.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="libwav.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="get_opt.c">
+    <ClCompile Include="getopt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -56,7 +56,7 @@
     <ClInclude Include="libwav.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="get_opt.h">
+    <ClInclude Include="getopt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
